Bayesian networks inference: recursive (beta) and novel tests