@@ -1,12 +1,12 @@
 package gospl.algo.sr.bn;
 
-import static gospl.algo.sr.bn.JUnitBigDecimals.assertEqualsBD;
 import static org.junit.Assert.assertEquals;
 
 import java.io.File;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -20,12 +20,18 @@ import org.junit.runners.Parameterized;
 import org.junit.runners.Parameterized.Parameter;
 import org.junit.runners.Parameterized.Parameters;
 
-import core.util.random.GenstarRandom;
+import core.util.random.GenstarRandomUtils;
 
-
+/**
+ * Tips: run with JVM parameters -XX:+PrintGCDetails to debug memory garbage collecting  
+ * 
+ * @author Samuel Thiriot
+ *
+ */
 @RunWith(Parameterized.class)
 public class TestInferenceEnginesOnData {
 
+	
 	@Parameters(name="{0} on {1}")
     public static Collection<Object[]> data() {
         return Arrays.asList(new Object[][] {
@@ -33,22 +39,36 @@ public class TestInferenceEnginesOnData {
 			{ SimpleConditionningInferenceEngine.class, 	new DataSprinkler() },
 			{ EliminationInferenceEngine.class, 			new DataSprinkler() },
 			{ RecursiveConditionningEngine.class, 			new DataSprinkler() },
-			
+			{ BestInferenceEngine.class, 					new DataSprinkler() },
+
 			{ SimpleConditionningInferenceEngine.class, 	new DataGerland1() },
 			{ EliminationInferenceEngine.class, 			new DataGerland1() },
 			{ RecursiveConditionningEngine.class, 			new DataGerland1() },
- 
+			{ BestInferenceEngine.class, 					new DataGerland1() },
+
 			{ SimpleConditionningInferenceEngine.class, 	new DataCancerSmall() },
 			{ EliminationInferenceEngine.class, 			new DataCancerSmall() },
 			{ RecursiveConditionningEngine.class, 			new DataCancerSmall() },
+			{ BestInferenceEngine.class, 					new DataCancerSmall() },
 
 			{ SimpleConditionningInferenceEngine.class, 	new DataSachs() },
 			{ EliminationInferenceEngine.class, 			new DataSachs() },
 			{ RecursiveConditionningEngine.class, 			new DataSachs() },
+			{ BestInferenceEngine.class, 					new DataSachs() },
 
-			{ SimpleConditionningInferenceEngine.class, 	new DataBarley() },
-			{ EliminationInferenceEngine.class, 			new DataBarley() },
-			{ RecursiveConditionningEngine.class, 			new DataBarley() },
+			// the complexity of this large case excludes much engines on large data
+			// we can activate those but not on build machines in which they would slow don't the process
+			
+			// // { SimpleConditionningInferenceEngine.class, 	new DataAlarm() },
+			{ EliminationInferenceEngine.class, 			new DataAlarm() },
+			//{ RecursiveConditionningEngine.class, 			new DataAlarm() },
+			// { BestInferenceEngine.class, 					new DataAlarm() },
+
+			// the complexity of this large case excludes these engines
+			// //{ SimpleConditionningInferenceEngine.class, 	new DataBarley() },
+			// { EliminationInferenceEngine.class, 				new DataBarley() },
+			// //{ RecursiveConditionningEngine.class, 			new DataBarley() },
+			// { BestInferenceEngine.class, 					new DataBarley() },
 
            });
     }
@@ -84,37 +104,51 @@ public class TestInferenceEnginesOnData {
 	}
 
 
-	@Test(timeout=1000)
+	@Test(timeout=40000)
 	public void testPriors() {
 		
 		InferencePerformanceUtils.singleton.reset();
 
-		for (Map.Entry<Set<String>,Map<String,Map<String,Double>>> evidence2expected: data.variables2expectedPriors.entrySet()) {
+		for (Map.Entry<String,Map<String,Double>> variable2expected: data.variables2expectedPriors.entrySet()) {
 		
 			// assert evidence
-			Set<String> vars = evidence2expected.getKey();
+			String var = variable2expected.getKey();
 			
-			Factor factor = null;
 			try {
-				factor = ie.computeFactorPriorMarginalsFromString(vars);
-			} catch (UnsupportedOperationException e) {
-				break;
-				//throw new UnsupportedOperationException("inference engine "+ieClass.getName()+" does not support the computation of prior marginals as factors");
-			}
-			
-			// then check results
-			Map<String,Map<String,Double>> expected = evidence2expected.getValue();
-			for (String s: expected.keySet()) {
-				for (String value: expected.get(s).keySet()) {
-					Double p = expected.get(s).get(value);
+				// try questionning the inference engine using factors
+				Set<String> vars = new HashSet<>(2);
+				vars.add(var);
+				Factor factor = ie.computeFactorPriorMarginalsFromString(vars);
+				
+				// then check results
+				Map<String,Double> expected = variable2expected.getValue();
+				for (String value: expected.keySet()) {
+					Double p = expected.get(value);
 					assertEquals(
-							"for dataset "+data.name+", expecting p("+s+"="+value+")="+p,
+							"for dataset "+data.name+", expecting p("+var+"="+value+")="+p,
 							p, 
-							factor.get(s,value),
+							factor.hasUniqueValue()?factor.getUniqueValue():factor.get(var,value),
 							Math.pow(1, -data.precision)
 							);
 				}
+				
+			} catch (UnsupportedOperationException e) {
+				
+				// or check the result 
+				
+				Map<String,Double> expected = variable2expected.getValue();
+				for (String value: expected.keySet()) {
+					Double p = expected.get(value);
+					assertEquals(
+							"for dataset "+data.name+", expecting p("+var+"="+value+")="+p,
+							p, 
+							ie.getConditionalProbability(var, value),
+							Math.pow(1, -data.precision)
+							);
+				}
+				//throw new UnsupportedOperationException("inference engine "+ieClass.getName()+" does not support the computation of prior marginals as factors");
 			}
+			
 			
 			ie.clearEvidence();
 			
@@ -122,7 +156,7 @@ public class TestInferenceEnginesOnData {
 	}
 		
 
-	@Test //(timeout=40000)
+	@Test //(timeout=60000)
 	public void testEvidencePropagationAndManyRandomQueries() {
 		
 		InferencePerformanceUtils.singleton.reset();
@@ -150,24 +184,22 @@ public class TestInferenceEnginesOnData {
 		}
 		
 		// define which variables we will query
-		List<NodeCategorical> toQuery = varsOrdered.subList(0, evidenceToSet);
-		System.err.println("will query for test the variables "+toQuery);
+		List<NodeCategorical> toQuery = varsOrdered.subList(0, Math.min(5, evidenceToSet));
+		System.err.println("will query for test the variables "+toQuery.stream().map(v->v.name).collect(Collectors.joining(",")));
 		
 		System.err.flush();
 		
 		// now iterate these variables and question their values
-		for (int i=0; i<3; i++) {
-			for (NodeCategorical n: toQuery) {
-				double total = 0.;
-				for (String s: n.getDomain()) {
-					double d = ie.getConditionalProbability(n, s);
-					System.err.println("p("+n.name+"="+s+"|evidence)="+d);
-					total = total += d;
-				}
-				System.err.println("=> p("+n.name+"=*|evidence)="+total);
+		for (NodeCategorical n: toQuery) {
+			double total = 0.;
+			for (String s: n.getDomain()) {
+				double d = ie.getConditionalProbability(n, s);
+				System.err.println("p("+n.name+"="+s+"|evidence)="+d);
+				total = total += d;
 			}
+			System.err.println("=> p("+n.name+"=*|evidence)="+total);
 		}
-		
+	
 		System.err.flush();
 
 		InferencePerformanceUtils.singleton.display();
@@ -176,7 +208,7 @@ public class TestInferenceEnginesOnData {
 		
 	}
 	
-	@Test(timeout=20000)
+	@Test(timeout=60000)
 	public void testEvidencePropagation() {
 		
 		InferencePerformanceUtils.singleton.reset();
@@ -211,8 +243,6 @@ public class TestInferenceEnginesOnData {
 				}
 			}
 			
-			// TODO add test inference proba evidence == 1
-
 			// then check results
 			Map<String,Map<String,Double>> expected = evidence2expected.getValue();
 			for (String s: expected.keySet()) {
@@ -239,104 +269,88 @@ public class TestInferenceEnginesOnData {
 	@Test(timeout=20000)
 	public void testGenerateWithEvidence() {
 
-		ie.clearEvidence();
-		InferencePerformanceUtils.singleton.reset();
-		
-		// define some evidence to be asserted for any individual
-		// sets evidence for the two last nodes of the network
-		List<NodeCategorical> varsOrdered = bn.enumerateNodes();
-		int evidenceToSet = bn.getNodes().size()/2;
-		Map<NodeCategorical,String> systematicEvidence = new HashMap<>();
-		
-		for (int i=0; i<evidenceToSet; i++) {
-			// take the one variable from the last of the network (to test retropropagation, the most difficult case)
-			NodeCategorical n = varsOrdered.get(varsOrdered.size()-i-1);
-			// take one value which does not has probability 0
-			String v = null;
-			v = n.getDomain().get(n.getDomainSize()-1);
-			/*for (String cv: n.getDomain()) {
-				if (BigDecimal.ZERO.compareTo(n.getConditionalProbabilityPosterior(cv)) < 0) {
-					v = cv;
-					break;
-				}
-			}
-			*/
-			//String v = GenstarRandomUtils.oneOf(n.getDomain().stream().filter(m ->)<0).collect(Collectors.toList()));
-			System.err.println("will define evidence "+n.name+"="+v);
-			systematicEvidence.put(n, v);
-		}
-		
-		for (int i=0; i<100; i++) {
+		while (true) {
 			
-			ie.addEvidence(systematicEvidence);
-			Map<NodeCategorical,String> node2attribute = new HashMap<>();
-			// define values for each individual
-			for (NodeCategorical n: bn.enumerateNodes()) {
-				double random = GenstarRandom.getInstance().nextDouble();
-				// pick up a value
-				double cumulated = 0.;
-				String value = null;
-				for (String v : n.getDomain()) {
-					cumulated += ie.getConditionalProbability(n, v);
-					if (cumulated >= random) {
-						value = v;
-						break;
-					}
-				}
-				if (value == null)
-					throw new RuntimeException("oops, should have picked a value!");
-				// that' the property of this individual
-				node2attribute.put(n, value);
-				// store this novel value as evidence for this individual
-				ie.addEvidence(n, value);
-			}
-			// we finished an individual
-			// reset evidence
-			ie.clearEvidence();
-			System.err.println(i+": "+node2attribute.entrySet().stream().map(e -> e.getKey().name+"="+e.getValue()).collect(Collectors.joining(",\t")));
-		}
+
+				ie.clearEvidence();
+				InferencePerformanceUtils.singleton.reset();
+				
+				// define some evidence to be asserted for any individual
+				// sets evidence for the two last nodes of the network
+				List<NodeCategorical> varsOrdered = bn.enumerateNodes();
+				int evidenceToSet = bn.getNodes().size()/2;
+				Map<NodeCategorical,String> systematicEvidence = new HashMap<>();
+				
+				for (int i=0; i<evidenceToSet; i++) {
+					
+					// take the one variable from the last of the network (to test retropropagation, the most difficult case)
+					NodeCategorical n = varsOrdered.get(varsOrdered.size()-i-1);
+					
+	
+					// take one value which does not has probability 0
+					String v = GenstarRandomUtils.oneOf(n.getDomain());
+					
+					systematicEvidence.put(n, v);
+					ie.addEvidence(systematicEvidence);
+						
+					System.err.println("will define evidence "+n.name+"="+v);
 		
-		InferencePerformanceUtils.singleton.display();
+				}
+				
+				System.out.println("free memory: "+Runtime.getRuntime().freeMemory()/1024/1024+"Mb");
+				System.out.flush();
+
+				try {
+
+				ie.addEvidence(systematicEvidence);
+		
+				for (int i=0; i<100; i++) {
+					
+	
+					// generate one
+					Map<NodeCategorical,String> node2attribute = ie.sampleOne();
+					
+					// we finished an individual
+					System.err.println(i+": "+node2attribute.entrySet().stream().map(e -> e.getKey().name+"="+e.getValue()).collect(Collectors.joining(",\t")));
+					
+						// ensure systematic evidence is enforced
+						for (Map.Entry<NodeCategorical,String> e: systematicEvidence.entrySet()) {
+							assertEquals(
+									"the generation feature of engine "+ieClass.getSimpleName()+" on data "+data.name+" should enforce prior evidence during generation, but it was not on "+e.getKey().name+"="+e.getValue(),
+									e.getValue(),
+									node2attribute.get(e.getKey())
+									);
+						}
+					
+							
+				}
+				
+				InferencePerformanceUtils.singleton.display();
+				
+				break;
+			} catch (IllegalArgumentException e) {
+				e.printStackTrace();
+				System.err.println("got an error with evidence "+systematicEvidence+", probably because Pr(evidence)=0; retrying with another random one");
+			}
+		}
 	}
 
-	public Map<NodeCategorical,String> generateFromFactorInferenceEngine () {
-		Map<NodeCategorical,String> res = new HashMap<>(bn.getNodes().size());
-		
-		
-	}
+
 	
-	@Test(timeout=20000)
+	@Test(timeout=40000)
 	public void testGenerate() {
 		
 		ie.clearEvidence();
 		InferencePerformanceUtils.singleton.reset();
 		
 		for (int i=0; i<100; i++) {
-			Map<NodeCategorical,String> node2attribute = new HashMap<>();
-			// define values for each individual
-			for (NodeCategorical n: bn.enumerateNodes()) {
-				double random = GenstarRandom.getInstance().nextDouble();
-				// pick up a value
-				double cumulated = 0.;
-				String value = null;
-				for (String v : n.getDomain()) {
-					cumulated += ie.getConditionalProbability(n, v);
-					if (cumulated >= random) {
-						value = v;
-						break;
-					}
-				}
-				if (value == null)
-					throw new RuntimeException("oops, should have picked a value!");
-				// that' the property of this individual
-				node2attribute.put(n, value);
-				// store this novel value as evidence for this individual
-				ie.addEvidence(n, value);
-			}
+			Map<NodeCategorical,String> node2attribute = ie.sampleOne();
+			
 			// we finished an individual
-			// reset evidence
-			ie.clearEvidence();
 			System.err.println(i+": "+node2attribute.entrySet().stream().map(e -> e.getKey().name+"="+e.getValue()).collect(Collectors.joining(",\t")));
+			System.err.flush();
+			System.out.println("free memory: "+Runtime.getRuntime().freeMemory()/1024/1024+"Mb");
+			System.out.flush();
 		}
 		
 		InferencePerformanceUtils.singleton.display();
